@startuml ClassDiagram

class FileHandler {
    +{static} int *readArrayFromFile(const string &fileName, int &n)
    +{static} void writeArraytoFile(const string &fileName, const int arr[], int n)
}

class OutputFormatter {
    +{static} void printArray(int array[], int n)
    +{static} void printOutputParameter(const string &parameter, long long count_compare, double runtime)
    +{static} void printComparisonMode(const string &algoName1, double time1, long long comp1,
    const string &algoName2, double time2, long long comp2,
    const string &fileName = "", int n = 0, const string &inputOrder = "")
    +{static} string parameter2Order(const string &parameter)
}

class SortingStrategy {
    #long long count_compare
    +{abstract} ~SortingStrategy()
    #{abstract} void sortImp(int arr[], int n) = 0;
    +void sort(int arr[], int n)
    +{abstract} string getName() const = 0
    +long long getCountCompare()
}

class SortingAlgorithmRegistry {
    -{static} SortingAlgorithmRegistry instance
    -map<string, FactoryFunction> registry_
    +{static} SortingAlgorithmRegistry &instance()
    +void registerAlgorithm(const string &name, FactoryFunction factory)
    +SortingStrategy *create(const string &name) const
}

class InsertionSort {
    #{method} sortImp(int arr[], int n)
    +{method} getName()
}

class BinaryInsertionSort {
    -int binarySearch(int arr[], int low, int high, int item)
    #{method} sortImp(int arr[], int n)
    +{method} getName()
}

class QuickSort{
    -int partition(int arr[], int low, int high);
    -void quickSort(int arr[], int low, int high);
    #{method} sortImp(int arr[], int n)
    +{method} getName()
}

class SelectionSort {
    #{method} sortImp(int arr[], int n)
    +{method} getName()
}

class BubbleSort{
    #{method} sortImp(int arr[], int n)
    +{method} getName()
}

class MergeSort {
    -void merge(int arr[], int p, int q, int r)
    -void mergeSort(int arr[], int l, int r)
    #{method} sortImp(int arr[], int n)
    +{method} getName()
}

class HeapSort {
    - void heapify(int arr[], int n, int i)
    #{method} void sortImp(int arr[], int n)
    +{method} string getName()
}

class ShakerSort {
    #{method} void sortImp(int arr[], int n)
    +{method} string getName()
}

class CountingSort {
    #{method} void sortImp(int arr[], int n)
    +{method} string getName()
}

class RadixSort {
    #{method} void sortImp(int arr[], int n)
    +{method} string getName()
}

class FlashSort {
    -void flashInsertionSort(int arr[], int s, int e)
    #{method} void sortImp(int arr[], int n)
    +{method} string getName()
}

class ShellSort {
    #{method} void sortImp(int arr[], int n)
    +{method} string getName()
}

entity main {
    +int *generateArray(int n, const string &pattern)
    +double runAlgorithm(SortingStrategy *algorithm, int arr[], int n)
    +void compareAlgorithms(SortingStrategy *algo1, SortingStrategy *algo2,
    int arr[], int n, double &time1, double &time2)
    +void handleCommand1(const string &algo, const string &given_input,
    const string &output_parameter = "")
    +void handleCommand2(const string &algo, int n, const string &input_order,
    const string &output_parameter = "")
    +void handleCommand3(const string &algo, int n, const string &output_parameter = "")
    +void handleCommand4(const string &algo1, const string &algo2, const string &fileName)
    +void handleCommand5(const string &algo1, const string &algo2, int inputSize,
    const string &inputOrder)
    +void handleArguments(int argc, char *argv[])
}

' Relations between classes
SortingStrategy <|-- InsertionSort
SortingStrategy <|-- QuickSort
SortingStrategy <|-- BinaryInsertionSort
SortingStrategy <|-- BubbleSort
SortingStrategy <|-- SelectionSort
SortingStrategy <|-- MergeSort
SortingStrategy <|-- HeapSort
SortingStrategy <|-- ShakerSort
SortingStrategy <|-- CountingSort
SortingStrategy <|-- RadixSort
SortingStrategy <|-- FlashSort
SortingStrategy <|-- ShellSort

SortingAlgorithmRegistry --> SortingStrategy : creates
main --> SortingAlgorithmRegistry
main --> FileHandler
main --> OutputFormatter
@enduml
